Endpoints en el cliente definidos

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,17 @@
                 "-o",
                 "build/bin/ArtistManager.exe"
             ]
+        },
+        {
+            "label": "build_&_run",
+            "type": "shell",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "command": "wails",
+            "args": [
+                "build"
+            ]
         }
     ]
 }
