--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,17 @@
             "cwd": "${workspaceFolder}",
             "env": {},
             "args": []
+        },
+        {
+            "name": "Build & run",
+            "type": "go",
+            "request": "launch",
+            "mode": "exec",
+            "program": "${workspaceFolder}/build/bin/ArtistManager.exe",
+            "preLaunchTask": "build_&_run",
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "args": []
         }
     ]
 }
